Introduce check in Flow